# jiralog

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  README.md  app  dune-project  formatter.go  go.mod  go.sum  jiralog.opam  justfile  logger.go  main.go  main_test.go  parser.go  security.go  utility.go  viewer.go
golang/: go.mod  main.go  main_test.go
inc/: command_runner.hpp
inc/cli/: cli.h  run_command.h
inc/http/: http_client.hpp
src/: command_runner.cpp  dune  jira.ml  main.cpp  main.ml  main.rs  util.ml
src/cli/: cli.cpp  run_command.cpp
src/http/: http_client.cpp
test/: dune  test_main.cpp  test_util.ml
